--- a/WebContent/demo4.html
+++ b/WebContent/demo4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var wsUri = "ws://localhost:8080/WebSockets/demo4";
+		var wsUri = "ws://unhsockets.herokuapp.com/demo4";
 		websocket = new WebSocket(wsUri);
 		websocket.onopen = function() {
 			$("#js").append("Connection Established<br/>");
