--- a/WebContent/demo1.html
+++ b/WebContent/demo1.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>Demo1 WebSocket</title>
 </head>
 <body>
 	<script type="text/javascript">
-		var wsUri = "ws://localhost:8080/WebSockets/demo1";
+		var wsUri = "wss://unhsockets.herokuapp.com/demo1";
 		websocket = new WebSocket(wsUri);
 		websocket.onopen = function() {
 			$("#js").append("Connection Established<br/>");
